--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Kris-B/imageuploadify@master/dist/imageuploadify.min.css">
- 
-   <link href="../src/css/icons.css" rel="stylesheet">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Kris-B/imageuploadify@master/dist/imageuploadify.min.css">
+
+  <link href="../src/css/icons.css" rel="stylesheet">
   <link href="../src/css/bootstrap-extended.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&amp;display=swap" rel="stylesheet">
 
-    <!--plugins-->
-    <link href="../src/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
-    <link href="../src/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
-    <link href="../src/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
-    <script src="../src/js/pace.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js@9.0.1/public/assets/styles/choices.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/choices.js@9.0.1/public/assets/scripts/choices.min.js"></script>
-    <!--
+  <!--plugins-->
+  <link href="../src/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
+  <link href="../src/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
+  <link href="../src/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
+  <script src="../src/js/pace.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js@9.0.1/public/assets/styles/choices.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/choices.js@9.0.1/public/assets/scripts/choices.min.js"></script>
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -38,12 +36,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Admin Pannel</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -53,16 +52,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-      <!-- <script>
+  <!-- <script>
         $('#image-upload').imageuploadify();
 
       </script> -->
-      <!--plugins-->
-      <script src="../src/js/jquery.min.js"></script>
-      <script src="../src/plugins/simplebar/js/simplebar.min.js"></script>
-      <script src="../src/plugins/metismenu/js/metisMenu.min.js"></script>
-      <script src="../src/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
-      <script src="../src/plugins/apexcharts-bundle/js/apexcharts.min.js"></script>
-      <script src="../src/js/index3.js"></script>
-  </body>
+  <!--plugins-->
+  <script src="../src/js/jquery.min.js"></script>
+  <script src="../src/plugins/simplebar/js/simplebar.min.js"></script>
+  <script src="../src/plugins/metismenu/js/metisMenu.min.js"></script>
+  <script src="../src/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+  <script src="../src/plugins/apexcharts-bundle/js/apexcharts.min.js"></script>
+  <script src="../src/js/index3.js"></script>
+</body>
+
 </html>
